Virtual Keyboard Dark Mode Fix

--- a/src/Styles/Keyboard.css
+++ b/src/Styles/Keyboard.css
@@ -5,12 +5,9 @@
 .hg-button.hg-red {
   background: rgb(255, 0, 0, 0.7);
   color: white;
+  border: none;
 }
 
-.hg-button {
-  background: red;
-  color: black;
-}
 /* .hg-theme-default .hg-button {
   max-height: 100px;
 } */
@@ -30,7 +27,7 @@
   /* box-shadow: none; */
   /*outlined*/
   /* border: 1px solid black; */
-  border: none;
+  /* border: none; */
 }
 
 .simple-keyboard.hg-layout-numeric {
@@ -42,18 +39,21 @@
   /* width: 300px; */
   background-color: transparent;
 }
+
 /*
   Theme: myTheme1
 */
 
 .simple-keyboard.myTheme1 .hg-button {
-  border: 1px solid white;
   height: 50px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #1e1e1e;
+  background: #2a2a2a;
   color: white;
+  border: 0.5px solid white;
+  /* box-shadow: 0px 0px 4px -1px rgba(255, 255, 255, 0.3); */
+  /* border: none; */
 }
 
 .simple-keyboard.myTheme1 .hg-button:active {
@@ -63,6 +63,7 @@
 
 .simple-keyboard.myTheme1 .hg-button.hg-red {
   background-color: red;
+  border: none;
 }
 
 #root .simple-keyboard.myTheme1 + .simple-keyboard-preview {
